--- a/package.json
+++ b/package.json
@@ -9,12 +9,14 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@aws-sdk/client-ses": "^3.525.0",
+    "@aws-sdk/client-ses": "^3.952.0",
     "autoprefixer": "^10.4.19",
     "lucide-react": "^0.372.0",
     "micro": "^10.0.1",
     "next": "^14.2.33",
+    "pdf-lib": "^1.17.1",
     "postcss": "^8.4.38",
+    "qrcode": "^1.5.4",
     "rate-limiter-flexible": "^2.3.10",
     "react": "^18",
     "react-dom": "^18",
@@ -23,6 +25,7 @@
   },
   "devDependencies": {
     "@types/node": "^20",
+    "@types/qrcode": "^1.5.6",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "eslint": "^8",
