Update for blog

--- a/.env.example
+++ b/.env.example
@@ -42,7 +42,7 @@ AWS_SECRET_ACCESS_KEY=
 # APPLICATION CONFIGURATION
 # ====================================================================
 NEXT_PUBLIC_BASE_URL=https://booppa.io
-NEXT_PUBLIC_API_BASE=http://localhost:8000
+NEXT_PUBLIC_API_BASE=http://47.129.253.227:8000
 NEXT_PUBLIC_CALENDLY_URL=https://calendly.com/booppa-demo/30min
 NODE_ENV=production
 
