--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@aws-sdk/client-ses": "^3.952.0",
     "autoprefixer": "^10.4.19",
+    "html-truncate": "^1.2.2",
     "lucide-react": "^0.372.0",
     "micro": "^10.0.1",
     "next": "^14.2.33",
