--- a/package.json
+++ b/package.json
@@ -21,7 +21,9 @@
     "rate-limiter-flexible": "^2.3.10",
     "react": "^18",
     "react-dom": "^18",
-    "stripe": "^14.0.0",
+    "recharts": "^3.7.0",
+    "socket.io-client": "^4.8.3",
+    "stripe": "^14.25.0",
     "tailwindcss": "^3.4.1"
   },
   "devDependencies": {
